2005-08-05  Jeff Muizelaar  <jeff@infidigm.net>

	* src/pixman-xserver-compat.h: Fix fbGetDrawable

	Patch from Billy Biggs <vektor@dumbterm.net>.

2005-08-05  Jeff Muizelaar  <jeff@infidigm.net>

	* src/icint.h: Fix some of the 4 bit per channel PICT definitions

	Patch from Billy Biggs <vektor@dumbterm.net>.

2005-08-05  Jeff Muizelaar  <jeff@infidigm.net>

	* src/ic.c: (fbCompositeSolidMask_nx8x8888),
	(fbCompositeSolidMask_nx8x0888), (fbCompositeSolidMask_nx8x0565),
	(fbCompositeSolidMask_nx8888x0565),
	(fbCompositeSolidMask_nx8888x0565C), (fbCompositeSrc_8888x0565),
	(fbCompositeTrans_0565xnx0565), (fbCompositeTrans_0888xnx0888),
	(fbCompositeSrcSrc_nxn), (pixman_composite):
	Fix up the fast-path compositing operators; those are useful
	for sources without alpha, but can't be used for sources with
	alpha.  Also, replaced fbCompositeSrcSrc_nxn with call to
	fbBlt as this function must handle 1, 4, 8, 16, 24, 32 bpp
	objects.  Would be nice to optimize fbBlt for common cases
	involving 8, 16, 24 and 32bpp.

	From Keith Packard.

2005-08-01  Billy Biggs  <vektor@dumbterm.net>

	* src/fbedge.c: (clip255), (add_saturate_8),
	(fbRasterizeEdges8):  Optimize spans where the same value is
	being added to multiple pixels.  This improves the speed of
	rasterizing wide trapezoids.

	* src/icint.h: Add an INLINE macro that matches the one from
	fbpict.h in xserver/fb.

2005-08-01  Amaury Jacquot  <sxpert@esitcom.org>
	
	* NEWS: fix typo

2005-07-30  Jeff Muizelaar  <jeff@infidigm.net>

	* src/ic.c: (fbCompositeSolidMask_nx8x0888),
	(fbCompositeSolidMask_nx8x0565), (fbCompositeSolidMask_nx1xn),
	(fbCompositeTrans_0565xnx0565), (fbCompositeTrans_0888xnx0888),
	(fbCompositeSrcSrc_nxn), (pixman_composite):
	* src/icblt.c: (fbBlt):
	* src/iccompose.c: (fbFetch_r8g8b8):
	Finish up merging the optimization work from jaymz.

2005-07-30  Jeff Muizelaar  <jeff@infidigm.net>

	* src/iccompose.c: (fbCombineMaskAlphaU),
	(fbCombineDisjointOutPart), (fbCombineDisjointInPart),